# scroll

./: .gitignore  CLAUDE.md  CODEX.md  README.md  REVIEW.md  pyproject.toml  run_ingest.py  server.py
.github/workflows/: tests.yml
scroll/: __init__.py  __main__.py  cli.py  deposit.py  export.py  extractor.py  git_reader.py  github_reader.py  integrity.py  query.py  relevance.py  state.py  store.py  sync.py  verification.py
tests/: test_cli.py  test_deposit.py  test_export.py  test_git_reader.py  test_github_reader.py  test_integrity.py  test_query.py  test_relevance.py  test_state.py  test_store.py  test_sync.py  test_verification.py
