[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scroll"
version = "0.1.0"
description = "Institutional memory, extracted from the work itself"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "anthropic>=0.50.0",
]

[project.scripts]
scroll = "scroll.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
